fixing add to cart spacing input bug

--- a/assets/css/scss/woocommerce.scss
+++ b/assets/css/scss/woocommerce.scss
@@ -302,6 +302,11 @@ article.page {
 			&:before { display: none; }
 		}
 	}
+	#main .quantity .qty {
+		@include media('>=desktop') {
+			height: 55px;
+		}
+	}
 }
 
 body.woocommerce {
@@ -779,9 +784,6 @@ body:not(.logged-in).woocommerce-account.my-account .woocommerce {
 	.quantity .qty {
 		display: inline-block;
 		width: 65px;
-		@include media('>=desktop') {
-			height: 55px;
-		}
 	}
 
 	// Button
